// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  aria-labelledby="responsive-dialog-title"
  fullScreen={false}
  fullWidth={true}
  onBackdropClick={[Function]}
  onEscapeKeyDown={[Function]}
  open={true}
>
  Dialog - 
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiDialogTitle-root-1"
      id="responsive-dialog-title"
    >
      <h2
        className="MuiTypography-root-2 MuiTypography-title-8"
      >
        Atualizar material
      </h2>
    </div>
    <div
      className="MuiDialogContent-root-37"
    >
      <div
        label="Nome do material"
        name="name"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Código"
        name="code"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Descrição"
        multiline={true}
        name="description"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Disponibilidade"
        name="availability"
        placeholder="Estados do Brasil e/ou países"
        type="text"
      />
      <div
        label="Unidade de venda"
        name="unitOfSale"
        placeholder="(ex: metro, m2, bobina, embalagem com 6, etc)"
        type="text"
      />
      <div
        label="Preço médio (por unidade de venda)"
        name="averagePrice"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Pedido mínimo"
        name="minimumPurchaseQuantity"
        parse={[Function]}
        type="number"
      />
      <div
        label="Pedido máximo"
        name="maximumPurchaseQuantity"
        parse={[Function]}
        type="number"
      />
      <div
        label="NCM"
        name="ncmCode"
        normalize={[Function]}
        placeholder="Oito dígitos, no modelo 19.05.31.00"
        type="text"
      />
      <div
        label="SH"
        name="shCode"
        normalize={[Function]}
        placeholder="Seis dígitos, no modelo 0103.91"
        type="text"
      />
      <div
        label="Certificações"
        multiline={true}
        name="certifications"
        placeholder="Lista de certificações"
        type="text"
      />
      <div
        label="Prêmios"
        multiline={true}
        name="prizes"
        placeholder="Lista de prêmios"
        type="text"
      />
      <div
        label="Densidade"
        name="density"
        placeholder="Densidade"
        type="text"
      />
      <div
        label="Dimensões"
        name="dimensions"
        placeholder="Dimensões"
        type="text"
      />
      <div />
    </div>
    <div
      className="MuiDialogActions-root-38"
    >
      <button
        className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-41"
        >
          Fechar
        </span>
        <span
          className="MuiTouchRipple-root-69"
        />
      </button>
      <button
        className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-41"
        >
          Atualizar material
        </span>
        <span
          className="MuiTouchRipple-root-69"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`with error renders correctly 1`] = `
<div
  aria-labelledby="responsive-dialog-title"
  fullScreen={false}
  fullWidth={true}
  onBackdropClick={[Function]}
  onEscapeKeyDown={[Function]}
  open={true}
>
  Dialog - 
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiDialogTitle-root-1"
      id="responsive-dialog-title"
    >
      <h2
        className="MuiTypography-root-2 MuiTypography-title-8"
      >
        Atualizar material
      </h2>
    </div>
    <div
      className="MuiDialogContent-root-37"
    >
      <div
        label="Nome do material"
        name="name"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Código"
        name="code"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Descrição"
        multiline={true}
        name="description"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Disponibilidade"
        name="availability"
        placeholder="Estados do Brasil e/ou países"
        type="text"
      />
      <div
        label="Unidade de venda"
        name="unitOfSale"
        placeholder="(ex: metro, m2, bobina, embalagem com 6, etc)"
        type="text"
      />
      <div
        label="Preço médio (por unidade de venda)"
        name="averagePrice"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
      <div
        label="Pedido mínimo"
        name="minimumPurchaseQuantity"
        parse={[Function]}
        type="number"
      />
      <div
        label="Pedido máximo"
        name="maximumPurchaseQuantity"
        parse={[Function]}
        type="number"
      />
      <div
        label="NCM"
        name="ncmCode"
        normalize={[Function]}
        placeholder="Oito dígitos, no modelo 19.05.31.00"
        type="text"
      />
      <div
        label="SH"
        name="shCode"
        normalize={[Function]}
        placeholder="Seis dígitos, no modelo 0103.91"
        type="text"
      />
      <div
        label="Certificações"
        multiline={true}
        name="certifications"
        placeholder="Lista de certificações"
        type="text"
      />
      <div
        label="Prêmios"
        multiline={true}
        name="prizes"
        placeholder="Lista de prêmios"
        type="text"
      />
      <div
        label="Densidade"
        name="density"
        placeholder="Densidade"
        type="text"
      />
      <div
        label="Dimensões"
        name="dimensions"
        placeholder="Dimensões"
        type="text"
      />
      <div>
        foo error
      </div>
    </div>
    <div
      className="MuiDialogActions-root-38"
    >
      <button
        className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-41"
        >
          Fechar
        </span>
        <span
          className="MuiTouchRipple-root-69"
        />
      </button>
      <button
        className="MuiButtonBase-root-66 MuiButton-root-40 MuiButton-text-42 MuiButton-textPrimary-43 MuiButton-flat-45 MuiButton-flatPrimary-46 MuiDialogActions-action-39"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-41"
        >
          Atualizar material
        </span>
        <span
          className="MuiTouchRipple-root-69"
        />
      </button>
    </div>
  </form>
</div>
`;
